<?xml version="1.0" encoding="utf-8"?>
<!-- 
/*
 * Copyright 2012 akaiosorani(akaiosorani@gmail.com)
 * 
 * Licensed under the Apache License, Version 2.0 (the "License"); you may not
 * use this file except in compliance with the License. You may obtain a copy of
 * the License at
 * 
 * http://www.apache.org/licenses/LICENSE-2.0
 * 
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS, WITHOUT
 * WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied. See the
 * License for the specific language governing permissions and limitations under
 * the License.
 */
 -->
<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/pref_general">
        <CheckBoxPreference
            android:key="@string/pref_key_startup"
            android:title="@string/pref_title_startup"
            android:summary="@string/pref_summary_startup"  />
        <ListPreference
                android:key="@string/pref_key_position"
                android:title="@string/pref_title_position_list"
                android:summary="@string/pref_summary_position_list"
                android:entries="@array/pref_entries_position"
                android:entryValues="@array/pref_values_position"
                android:dialogTitle="@string/pref_title_position_list" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_brightness">
        <!-- brighten display when opening -->
        <CheckBoxPreference
            android:key="@string/pref_key_bright_with_dialog"
            android:title="@string/pref_title_bright_with_dialog"
            android:summary="@string/pref_summary_bright_with_dialog"  />
        <!-- brightness settings for opening  -->
        <EditTextPreference
            android:key="@string/pref_key_brightness"
            android:title="@string/pref_title_brightness"
            android:summary="@string/pref_summary_brightness" />
        <!-- return brightness when closing  -->
        <CheckBoxPreference
            android:key="@string/pref_key_revert_brightness"
            android:title="@string/pref_title_revert_brightness"
            android:summary="@string/pref_summary_revert_brightness"  />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/pref_others">
        <CheckBoxPreference
            android:key="@string/pref_key_show_battery"
            android:title="@string/pref_title_show_battery"
            android:summary="@string/pref_summary_show_battery"  />
        <ListPreference
                android:key="@string/pref_key_silent_mode"
                android:title="@string/pref_title_silent_mode"
                android:summary="@string/pref_summary_silent_mode"
                android:entries="@array/pref_entries_silent"
                android:entryValues="@array/pref_values_silent"
                android:defaultValue="@array/pref_values_silent"
                android:dialogTitle="@string/pref_title_silent_mode" />
        </PreferenceCategory>
</PreferenceScreen>
